# led-matrix

./: Cargo.toml  README.md
board/: board.kicad_pro  board.kicad_sch
src/: characters.rs  main.rs
